--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "gpio": "^0.2.10",
         "hbs": "^4.1.2",
         "morgan": "^1.10.0",
+        "nodemailer": "^6.6.3",
         "path": "^0.12.7",
         "ping": "^0.4.1",
         "request": "^2.88.2",
