--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.19.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "hbs": "^4.1.2",
+        "mongoose": "^5.13.5",
         "morgan": "^1.10.0",
         "nodemailer": "^6.6.3",
+        "onoff": "^6.0.3",
         "path": "^0.12.7",
         "ping": "^0.4.1",
         "request": "^2.88.2",
-        "socket.io": "^4.1.3",
-        "onoff": "^6.0.3"
+        "socket.io": "^4.1.3"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
