--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
         "path": "^0.12.7",
         "ping": "^0.4.1",
         "request": "^2.88.2",
-        "socket.io": "^4.1.3"
+        "socket.io": "^4.1.3",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
