--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
+        "express-subdomain": "^1.0.5",
         "hbs": "^4.1.2",
         "mongoose": "^5.13.5",
         "morgan": "^1.10.0",
@@ -26,6 +27,7 @@
         "ping": "^0.4.1",
         "request": "^2.88.2",
         "socket.io": "^4.1.3",
+        "vhost": "^3.0.2",
         "winston": "^3.3.3"
     },
     "devDependencies": {
