--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "Manuel Lerchner",
     "license": "ISC",
     "dependencies": {
+        "circular-json": "^0.5.9",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
