--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "path": "^0.12.7",
         "ping": "^0.4.1",
         "request": "^2.88.2",
+        "robots.txt": "^1.1.0",
         "socket.io": "^4.1.3",
         "vhost": "^3.0.2",
         "winston": "^3.3.3"
