--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "author": "Manuel Lerchner",
     "license": "ISC",
     "dependencies": {
+        "bluebird": "^3.7.2",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "express-subdomain": "^1.0.5",
         "hbs": "^4.1.2",
-        "mongoose": "^5.13.5",
+        "mongoose": "^5.13.14",
         "morgan": "^1.10.0",
         "nodemailer": "^6.6.3",
         "onoff": "^6.0.3",
