--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.17.1",
         "express-handlebars": "^5.3.2",
         "express-subdomain": "^1.0.5",
+        "googleapis": "^105.0.0",
         "hbs": "^4.1.2",
         "mongoose": "^5.13.14",
         "morgan": "^1.10.0",
