--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           clean: false
+          
+      - name: NPM install
+        run: npm install
 
       - name: Restart Server
         run: pm2 restart "3000:Manuel-Lerchner"
